@@ -2,6 +2,10 @@
         * INSTALL: Windows notice removed. Added less(1) as a weak dependency.
         * `make dist`: Include "testcfg" as it's needed by something in
             test.py.
+        * anonymine_engine.py (hiscores (display)): Bugfix:
+            UnicodeDecodeError on localized weekday abbreviations.
+        * anonymine.py (highscores_display): Bugfix: Encode the text before
+            sending to less(1).
 
 2016-08-12      Oskar Skog      <oskar.skog.finland@gmail.com>
     0.2.28
